Fixing spacing issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -21,10 +21,10 @@ body {
   width: 100%;
   height: 100%;
   border: none;
-  padding-top: calc(constant(safe-area-inset-top) + 10px);
-  padding-right: calc(constant(safe-area-inset-right) + 10px);
-  padding-bottom: calc(constant(safe-area-inset-bottom) + 10px);
-  padding-left: calc(constant(safe-area-inset-left) + 10px);
+  padding-top: calc(env(safe-area-inset-top) + 5px);
+  padding-right: calc(env(safe-area-inset-right) + 5px);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 5px);
+  padding-left: calc(env(safe-area-inset-left) + 5px);
 }
 
 .button-column {
